@@ -1,3 +1,7 @@
+2007-01-23  Danilo Šegan  <danilo@gnome.org>
+
+	* gnome-modules.xml.in: Add f-spot, dasher docs.
+
 2007-01-13  Danilo Šegan  <danilo@gnome.org>
 
 	* l10n.py (trans): Optimize to load MO file only once.
